[package]
name = "rustworking-cli"
version = "0.1.0"
authors = ["timmonfette1 <monfette.timothy@gmail.com>"]
repository = "https://github.com/timmonfette1/rustworking-cli"
license = "MIT"
description = "CLI tool for networking functions implemented in Rust"

[dependencies]
argparse = "*"
rustworking-core = { path = "rustworking-core" }

[workspace]
members = ["rustworking-core"]
